<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    tools:context="senac.com.br.controledegastos.activities.NovoGastoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nomedoItem"
        android:layout_marginBottom="2dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nomeItem"
        android:id="@+id/nomeItem"
        android:layout_marginBottom="2dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_unica"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:id="@+id/rbUnica"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_multipla"
                android:layout_marginEnd="2dp"
                android:id="@+id/rbDiversas"/>

        </RadioGroup>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_weight="1.5"
            android:drawableStart="@android:drawable/ic_menu_help"
            android:text="@string/tv_ajuda"
            android:onClick="mostrar_esconder"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/linear_ajuda"
        android:layout_marginBottom="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/texto_ajuda"
            android:onClick="mostrar_esconder"
            android:layout_marginBottom="2dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valordoGasto"
        android:layout_marginBottom="2dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valorGasto"
        android:id="@+id/valorItem"
        android:inputType="numberDecimal"
        android:layout_marginBottom="2dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:onClick="salvarItem"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_voltar"
        android:onClick="voltar"/>

</LinearLayout>