<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/relativeBase"
                android:background="@color/colorPrimary">
    <TextView
        style="@style/relativeTextView"
        android:text="@string/tutorial_titulo_2"
        android:textSize="24sp"
        android:layout_centerInParent="true"
        android:id="@+id/tutorial_titulo_slide_2"/>
    <TextView
        style="@style/relativeTextView"
        android:text="@string/tutorial_subTitulo_2"
        android:layout_below="@+id/tutorial_titulo_slide_2"
        android:id="@+id/tutorial_subtitulo_2"
        android:textSize="16sp"/>
    <TextView
        style="@style/relativeTextView"
        android:layout_below="@+id/tutorial_subtitulo_2"
        android:text="@string/tutorial_subtitulo_2_2"
        android:textSize="16sp"
        />
</RelativeLayout>