<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The first child in the layout is for the main Activity UI-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity"
        android:background="#fdf3d9">

        <TextView
            android:id="@+id/textview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:textAlignment="center"
            style="@style/txt"/>

        <LinearLayout
            android:layout_below="@+id/textview1"
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:id="@+id/nomoSaldo"
                android:text="@string/restanteMes"
                android:layout_marginRight="2dp"
                style="@style/txt"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:id="@+id/dinheiroMes"
                style="@style/txt"/>

        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:layout_below="@id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layout3"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:textColor="#000"
                android:text="@string/gastosMes"
                style="@style/txt"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:id="@+id/gastosMes"
                style="@style/txt"/>

        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/layout3"
            android:id="@+id/layout4"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:textColor="#000"
                android:text="@string/cartaovelho"
                style="@style/txt"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:id="@+id/cartaoAnterior"
                style="@style/txt"/>

        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout5"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:maxHeight="42dp"
                android:layout_gravity="center"
                android:text="@string/adicionar_gasto"
                android:drawableStart="@drawable/cash"
                android:onClick="adicionarGasto"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                style="@style/button"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:maxHeight="42dp"
                android:drawableStart="@android:drawable/ic_menu_view"
                android:text="VER CARTÃO"
                android:onClick="verCartao"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                style="@style/button"/>

        </LinearLayout>


    </RelativeLayout>

    <!-- Side navigation drawer UI -->
    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#fdf3d9"
        tools:ignore="RtlHardcoded"/>

</android.support.v4.widget.DrawerLayout>